# community-a4e-c

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  External Model Arg List
.github/workflows/: main.yml
A-4E-C/: A-4E-C.lua  CMakeLists.txt  entry.lua  log.bat
A-4E-C/Cockpit/Scripts/: ConfigurePackage.lua  EFM_Data_Bus.lua  ImGui.lua  clickabledata.lua  command_defs.lua  device_init.lua  devices.lua  utils.lua
A-4E-C/Cockpit/Scripts/Mission/: beacons.lua  mission.lua  mission_example.lua  tacan.lua  units.lua
A-4E-C/Cockpit/Scripts/Nav/: ara63_mcl.lua  coord_utils.lua  nav.lua  nav_util.lua  tacan.lua
A-4E-C/Cockpit/Scripts/Systems/: afcs2.lua  avionics.lua  flaps.lua  mission.lua  mission_utils.lua  radio_controls2.lua  rhaw_radars.lua  shrike.lua  stores_config.lua  weapon_system.lua
A-4E-C/ExternalFM/Common/: CMakeLists.txt
A-4E-C/ExternalFM/Common/Common/: Commands.h  Devices.h  Globals.h  Hashes.h  Maths.h  Ship.h  Vec3.h  md5.c  md5.h
A-4E-C/ExternalFM/FM/: Actuator.cpp  AeroElement.cpp  AeroElement.h  AirDataComputer.cpp  AirDataComputer.h  AircraftState.cpp  AircraftState.h  Airframe.cpp  Airframe.h  Asteroids.h  Avionics.cpp  Avionics.h  CP741.cpp  CP741.h  Damage.cpp  Damage.h  Data.h  Engine2.cpp  Engine2.h  FlightModel.cpp  FlightModel.h  FuelSystem2.cpp  FuelSystem2.h  Gyro.cpp_  Gyro.h_  Hashes.h  ILS.h  ImguiDisplay.h  Input.h  Interface.h  LERX.h  LuaScooter.cpp  LuaVM.cpp  LuaVM.h  MouseControl.h  Radar.cpp  Radar.h  RadarScope.cpp  RadarScope.h  Safe.cpp  (+9 more)
A-4E-C/ExternalFM/FM_Verify/: FM_Verify.cpp  Tacview-20230416-204713-DCS-F5A4F1OcaStrike_V3.csv  Tacview-20230416-204713-DCS-F5A4F1OcaStrike_V3_Alex.csv  Tacview-20230416-204713-DCS-F5A4F1OcaStrike_V3_Mirage.csv
A-4E-C/ExternalFM/Verify/: CMakeLists.txt  Verify.cpp  Verify.h
A-4E-C/Input/joystick/: default.lua
A-4E-C/Input/keyboard/: default.lua
A-4E-C/Input/mouse/: default.lua
A-4E-C/Weapons/: A4E_Weapons.lua
A-4E-C/build-tools/: CMakeLists.txt  generate_headers.bat  generate_headers.lua  md5_main.c
